# jwies

./: .gitignore  LOG.txt  README.md  TODO.md  controller_main.py  controller_table.py  main_controller.py  main_player.py  player_main.py  player_player.py  pyproject.toml  run_1s_3c.bat  run_4c.bat  settings_pane.ui  startup.py  staticvar.py  tox.inites
config/: player.ini
doc/: LOG.txt  communication_flow.vsdx  flow.txt  important_attributes.txt  regels.txt  spelverloop.txt  terms.txt  todo.txt  ~$$communication_flow.~vsdx
docs/: card_terms.md  developer_documentation.md
docs/architecture/: code_flow.txt  communication_flow.vsdx  important_attributes.txt
docs/qtdocs/: Qt 6.9.url  Qt for Python.url  Reference Guide — PyQt Documentation v6.9.0.url
docs/style_guide/: style_guide.md
scripts/: build_ui.bat  build_ui.py  loc.py  run_1s_3c.bat  run_4c.bat
settings/: controller.ini  player.ini
src/: Copy of logica.py  card.py  client.py  constants.py  controller_main.py  controller_player.py  controller_table.py  debug.py  devnotes.txt  gamemaster.py  green.py  green_run.py  logica.py  paths.py  player_helper_classes.py  player_helper_functions.py  player_main.py  player_player.py  requirements.txt  resource.py  resource.qrc  server.py  staticvar.py  tcpserver.py  wies.py  zstart-1server_3clients.bat  zstart-4clients.bat  ztartclients - Copy.bat  ztartclients.bat
src/settings/: controller.ini  player.ini
src/ui/: connect_pane.py  connect_pane.ui  settings_pane.py  settings_pane.ui  test.ui
ui/: settings_pane.ui
