[project]
name = "jwies"
version = "0.2.0"
description = "Vlaamse wies implementatie in Python en Qt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydealer>=1.4.0",
    "pyprojroot>=0.3.0",
    "pyqt6>=6.9.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.4.1",
]


[tool.bumpversion]
current_version = "0.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""